Created separate project file that compiles a portable class library from the same sources
Two projects are needed because PCL cannot target .NET 2.0. Not sure how
many would need that but this approach builds both .NET 2.0 assembly and
a PCL assembly that targets .NET 4.0, Xamarin, Windows Phone 8, Windows
8, Silverlight 5.

--- a/CommonMark.Console/CommonMark.Console.csproj
+++ b/CommonMark.Console/CommonMark.Console.csproj
@@ -44,16 +44,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CommonMark\CommonMark.csproj">
-      <Project>{0fd4b1dd-45a8-4f02-beb0-5881cd512573}</Project>
-      <Name>CommonMark</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Sample.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CommonMark\CommonMark.Base.csproj">
+      <Project>{0fd4b1dd-45a8-4f02-beb0-5881cd512573}</Project>
+      <Name>CommonMark.Base</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
