--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ x64/
 build/
 [Bb]in/
 [Oo]bj/
+*.nupkg
 
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
 !packages/*/build/
