--- a/CommonMark/CommonMark.Base.csproj
+++ b/CommonMark/CommonMark.Base.csproj
@@ -47,6 +47,8 @@
     <Compile Include="CommonMarkException.cs" />
     <Compile Include="CommonMarkSettings.cs" />
     <Compile Include="OutputFormat.cs" />
+    <Compile Include="Parser\ScannerCharacterMatcher.cs" />
+    <Compile Include="Parser\ScannerHtmlTag.cs" />
     <Compile Include="Syntax\Block.cs" />
     <Compile Include="Parser\BlockMethods.cs" />
     <Compile Include="Syntax\BlockAttributes.cs" />
