--- a/CommonMark/CommonMark.Base.csproj
+++ b/CommonMark/CommonMark.Base.csproj
@@ -47,6 +47,7 @@
     <Compile Include="CommonMarkException.cs" />
     <Compile Include="CommonMarkSettings.cs" />
     <Compile Include="OutputFormat.cs" />
+    <Compile Include="Parser\InlineStack.cs" />
     <Compile Include="Parser\ScannerCharacterMatcher.cs" />
     <Compile Include="Parser\ScannerHtmlTag.cs" />
     <Compile Include="Syntax\Block.cs" />
@@ -68,7 +69,7 @@
     <Compile Include="Syntax\ListType.cs" />
     <Compile Include="Syntax\Reference.cs" />
     <Compile Include="Parser\Scanner.cs" />
-    <Compile Include="Syntax\Subject.cs" />
+    <Compile Include="Parser\Subject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities.cs" />
   </ItemGroup>
