--- a/CommonMark/CommonMark.Base.csproj
+++ b/CommonMark/CommonMark.Base.csproj
@@ -73,6 +73,8 @@
     <Compile Include="Parser\Scanner.cs" />
     <Compile Include="Parser\Subject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Syntax\StringContent.cs" />
+    <Compile Include="Syntax\StringContentPart.cs" />
     <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
