--- a/CommonMark.NET.nuspec
+++ b/CommonMark.NET.nuspec
@@ -2,17 +2,17 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
   <metadata>
     <id>CommonMark.NET</id>
-    <version>0.2.1</version>
+    <version>0.3.0</version>
     <title>CommonMark.NET</title>
     <authors>Knagis</authors>
     <licenseUrl>https://raw.githubusercontent.com/Knagis/CommonMark.NET/master/LICENSE.md</licenseUrl>
     <projectUrl>https://github.com/Knagis/CommonMark.NET/</projectUrl>
     <iconUrl>https://raw.githubusercontent.com/dcurtis/markdown-mark/master/png/32x20.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Library for converting Markdown documents to HTML according to the CommonMark specification. Optimized for maximum performance.</description>
+    <summary>Fastest .NET library for converting Markdown documents to HTML.</summary>
+    <description>.NET library for converting Markdown documents to HTML according to the CommonMark specification. Optimized for maximum performance and targets every .NET version since 2.0.</description>
     <releaseNotes>
-      Small fixes and performance improvements.
-      Performance now slightly better than MarkdownDeep (which is the fastest alternative).
+      Further performance improvements.
     </releaseNotes>
     <copyright>Copyright © Kārlis Gaņģis 2014</copyright>
     <tags>CommonMark Markdown</tags>
