--- a/CommonMark.Tests/CommonMark.Tests.csproj
+++ b/CommonMark.Tests/CommonMark.Tests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="ListTests.cs" />
     <Compile Include="HtmlTests.cs" />
+    <Compile Include="SettingsTests.cs" />
     <Compile Include="UrlTests.cs" />
     <Compile Include="EmphasisTests.cs" />
     <Compile Include="Helpers.cs" />
