Added strikethrough parser (`~~foo~~` -> `<del>foo</del>`). Disabled by default, can be enabled through settings.

--- a/CommonMark/CommonMark.Base.csproj
+++ b/CommonMark/CommonMark.Base.csproj
@@ -44,6 +44,7 @@
     <AssemblyOriginatorKeyFile>Properties\public.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CommonMarkAdditionalFeatures.cs" />
     <Compile Include="CommonMarkConverter.cs" />
     <Compile Include="CommonMarkException.cs" />
     <Compile Include="CommonMarkSettings.cs" />
