--- a/CommonMark.NET.nuspec
+++ b/CommonMark.NET.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
   <metadata>
     <id>CommonMark.NET</id>
-    <version>0.6.0</version>
+    <version>0.6.1</version>
     <title>CommonMark.NET</title>
     <authors>Knagis</authors>
     <licenseUrl>https://raw.githubusercontent.com/Knagis/CommonMark.NET/master/LICENSE.md</licenseUrl>
@@ -11,8 +11,8 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <summary>Fastest .NET library for converting Markdown documents to HTML.</summary>
     <description>.NET library for converting Markdown documents to HTML according to the CommonMark specification. Optimized for maximum performance and targets every .NET version since 2.0, including PCL and Mono.</description>
-    <releaseNotes>Updated parser according to specification v.0.15. Few bugfixes and additional custom features - rendering soft line breaks and ~~strikethrough~~ parser.</releaseNotes>
-    <copyright>Copyright © Kārlis Gaņģis 2014</copyright>
+    <releaseNotes>Small bugfixes and enhanced documentation.</releaseNotes>
+    <copyright>Copyright © Kārlis Gaņģis 2014-2015</copyright>
     <tags>CommonMark Markdown</tags>
   </metadata>
   <files>
