Implemented Block.AsEnumerable() method that enables quick traversal of the document tree without recursion and enables use of LINQ. The performance of the iterator is lower than can be achieved by writing custom methods like Printer.cs but requires no boilerplate to quickly do small operations on the document.

--- a/CommonMark/CommonMark.Base.csproj
+++ b/CommonMark/CommonMark.Base.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Syntax\Block.cs" />
     <Compile Include="Parser\BlockMethods.cs" />
     <Compile Include="Syntax\BlockTag.cs" />
+    <Compile Include="Syntax\Enumerable.cs" />
+    <Compile Include="Syntax\EnumeratorEntry.cs" />
     <Compile Include="Syntax\FencedCodeData.cs" />
     <Compile Include="Formatter\HtmlPrinter.cs" />
     <Compile Include="Formatter\HtmlTextWriter.cs" />
