Implemented Version property and deprecated AssemblyVersion. The new property reads the Nuget package version number from the embedded .nuspec file. This version number provides much more value than the assembly version which is not updated between these releases.

--- a/CommonMark/CommonMark.Base.csproj
+++ b/CommonMark/CommonMark.Base.csproj
@@ -80,6 +80,9 @@
     <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="..\CommonMark.NET.nuspec">
+      <Link>Properties\CommonMark.NET.nuspec</Link>
+    </EmbeddedResource>
     <None Include="Properties\public.snk" />
   </ItemGroup>
   <Import Project="CommonMark.Targets.csproj" />
