--- a/CommonMark.NET.nuspec
+++ b/CommonMark.NET.nuspec
@@ -22,6 +22,6 @@
     <file src="CommonMark\bin\v4.0\Release\CommonMark.*" target="lib\net40-client\" />
     <file src="CommonMark\bin\v4.5\Release\CommonMark.*" target="lib\net45\" />
     <file src="CommonMark\bin\portable\Release\CommonMark.*" target="lib\portable-net40+sl50+wp80+win+wpa81+MonoAndroid10+MonoTouch10\" />
-    <file src="CommonMark\bin\core\Release\CommonMark.*" target="lib\aspnetcore50\" />
+    <file src="CommonMark\bin\core\Release\aspnetcore50\CommonMark.*" target="lib\aspnetcore50\" />
   </files>
 </package>
