Updated markdown formatter.

--- a/CommonMark/CommonMark.Base.csproj
+++ b/CommonMark/CommonMark.Base.csproj
@@ -48,8 +48,12 @@
     <Compile Include="CommonMarkConverter.cs" />
     <Compile Include="CommonMarkException.cs" />
     <Compile Include="CommonMarkSettings.cs" />
-    <Compile Include="Formatter\MarkdownPrinter.cs" />
     <Compile Include="Formatters\HtmlFormatter.cs" />
+    <Compile Include="Formatters\HtmlFormatterSlim.cs" />
+    <Compile Include="Formatters\MarkdownTextWriter.cs" />
+    <Compile Include="Formatters\HtmlTextWriter.cs" />
+    <Compile Include="Formatters\MarkdownFormatter.cs" />
+    <Compile Include="Formatters\Printer.cs" />
     <Compile Include="Func.cs" />
     <Compile Include="OutputFormat.cs" />
     <Compile Include="Parser\EntityDecoder.cs" />
@@ -66,14 +70,11 @@
     <Compile Include="Syntax\Enumerable.cs" />
     <Compile Include="Syntax\EnumeratorEntry.cs" />
     <Compile Include="Syntax\FencedCodeData.cs" />
-    <Compile Include="Formatters\HtmlFormatterSlim.cs" />
-    <Compile Include="Formatters\HtmlTextWriter.cs" />
     <Compile Include="Syntax\Inline.cs" />
     <Compile Include="Parser\InlineMethods.cs" />
     <Compile Include="Syntax\InlineContentLinkable.cs" />
     <Compile Include="Syntax\InlineTag.cs" />
     <Compile Include="Syntax\ListData.cs" />
-    <Compile Include="Formatters\Printer.cs" />
     <Compile Include="Syntax\ListDelimeter.cs" />
     <Compile Include="Syntax\ListType.cs" />
     <Compile Include="Syntax\Reference.cs" />
