Added HtmlPrinterVisitor and tests

--- a/CommonMark.Tests/CommonMark.Tests.csproj
+++ b/CommonMark.Tests/CommonMark.Tests.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="HtmlPrinterVisitorTests.cs" />
     <Compile Include="ListTests.cs" />
     <Compile Include="HtmlTests.cs" />
     <Compile Include="SettingsTests.cs" />
