--- a/CommonMark.NET.nuspec
+++ b/CommonMark.NET.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
   <metadata>
     <id>CommonMark.NET</id>
-    <version>0.8.5</version>
+    <version>0.9.0</version>
     <title>CommonMark.NET</title>
     <authors>Knagis</authors>
     <licenseUrl>https://raw.githubusercontent.com/Knagis/CommonMark.NET/master/LICENSE.md</licenseUrl>
@@ -11,7 +11,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <summary>Fastest .NET library for converting Markdown documents to HTML.</summary>
     <description>.NET library for converting Markdown documents to HTML according to the CommonMark specification. Optimized for maximum performance and targets every .NET version since 2.0, including PCL, Mono and .NET Core.</description>
-    <releaseNotes>Bug fixes</releaseNotes>
+    <releaseNotes>New HtmlFormatter class that allows customization of HTML output. Package now includes console executable that can be used to convert markdown files.</releaseNotes>
     <copyright>Copyright © Kārlis Gaņģis 2014-2015</copyright>
     <tags>CommonMark Markdown</tags>
   </metadata>
@@ -23,5 +23,7 @@
     <file src="CommonMark\bin\v4.5\Release\CommonMark.*" target="lib\net45\" />
     <file src="CommonMark\bin\portable\Release\CommonMark.*" target="lib\portable-net40+sl50+wp80+win+wpa81+MonoAndroid10+MonoTouch10\" />
     <file src="CommonMark\bin\core\Release\aspnetcore50\CommonMark.*" target="lib\aspnetcore50\" />
+    <file src="CommonMark.Console\bin\Release\CommonMark.Console.exe" target="tools\cmark.exe" />
+    <file src="CommonMark.Console\App.nuget.config" target="tools\cmark.exe.config" />
   </files>
 </package>
