--- a/CommonMark.Tests/CommonMark.Tests.csproj
+++ b/CommonMark.Tests/CommonMark.Tests.csproj
@@ -63,6 +63,7 @@
     <Compile Include="HtmlTests.cs" />
     <Compile Include="SettingsTests.cs" />
     <Compile Include="GeneralTests.cs" />
+    <Compile Include="SubscriptTests.cs" />
     <Compile Include="UrlTests.cs" />
     <Compile Include="EmphasisTests.cs" />
     <Compile Include="Helpers.cs" />
