--- a/CommonMark.Tests/CommonMark.Tests.csproj
+++ b/CommonMark.Tests/CommonMark.Tests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="SettingsTests.cs" />
     <Compile Include="GeneralTests.cs" />
     <Compile Include="SubscriptTests.cs" />
+    <Compile Include="SuperscriptTests.cs" />
     <Compile Include="UrlTests.cs" />
     <Compile Include="EmphasisTests.cs" />
     <Compile Include="Helpers.cs" />
