Add compilation symbols for Release Fix outputPath

--- a/CommonMark.Portable45/CommonMark.Portable45.csproj
+++ b/CommonMark.Portable45/CommonMark.Portable45.csproj
@@ -22,7 +22,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\bin\portable_v4.5\Debug\</OutputPath>
+    <OutputPath>..\CommonMark\bin\portable_v4.5\Debug\</OutputPath>
     <DefineConstants>TRACE;DEBUG;portable;v4_5;OptimizeFor45</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -30,8 +30,8 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\bin\portable_v4.5\Debug\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <OutputPath>..\CommonMark\bin\portable_v4.5\Debug\</OutputPath>
+    <DefineConstants>TRACE;portable;v4_5</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
