--- a/CommonMark/CommonMark.Base.csproj
+++ b/CommonMark/CommonMark.Base.csproj
@@ -12,8 +12,8 @@
     <RootNamespace>CommonMark</RootNamespace>
     <AssemblyName>CommonMark</AssemblyName>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkVersion Condition=" '$(TargetFrameworkVersionEx)' == '' ">v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile Condition=" '$(TargetFrameworkProfile)' == '' ">Profile328</TargetFrameworkProfile>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkProfile>Profile328</TargetFrameworkProfile>
     <MinimumVisualStudioVersion>10.0</MinimumVisualStudioVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
