--- a/CommonMark/CommonMark.NET45.csproj
+++ b/CommonMark/CommonMark.NET45.csproj
@@ -4,7 +4,7 @@
     <BuildMode>v4.5</BuildMode>
     <TargetFrameworkVersionEx>v4.5</TargetFrameworkVersionEx>
     <ProjectGuid>{40AB0D9C-9464-45B2-AC79-72A566FA1371}</ProjectGuid>
-    <DefineConstantsEx>OptimizeFor45</DefineConstantsEx>
+    <DefineConstantsEx>OptimizeFor45;Parallelize</DefineConstantsEx>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
