Added Github-style automatically generated heading IDs.

--- a/CommonMark.NETCore/project.json
+++ b/CommonMark.NETCore/project.json
@@ -14,7 +14,8 @@
         "System.Reflection": "4.0.10",
         "System.Collections": "4.0.10",
         "System.Diagnostics.Debug": "4.0.10",
-        "System.Globalization.Extensions": "4.0.0"
+        "System.Globalization.Extensions": "4.0.0",
+        "System.Text.RegularExpressions": "4.0.0"
       }
     }
   },
