--- a/CommonMark.Tests/CommonMark.Tests.csproj
+++ b/CommonMark.Tests/CommonMark.Tests.csproj
@@ -60,7 +60,7 @@
     <Compile Include="HeadingTests.cs" />
     <Compile Include="SourcePositionTests.cs" />
     <Compile Include="EnumeratorTests.cs" />
-    <Compile Include="GithubHeaderIdTests.cs" />
+    <Compile Include="GithubHeadingIdTests.cs" />
     <Compile Include="StrikethroughTests.cs" />
     <Compile Include="ListTests.cs" />
     <Compile Include="HtmlTests.cs" />
