Fix source position tracking for HTML blocks. Fixes #87

--- a/CommonMark.NET.nuspec
+++ b/CommonMark.NET.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
   <metadata>
     <id>CommonMark.NET</id>
-    <version>0.13.2</version>
+    <version>0.13.3</version>
     <title>CommonMark.NET</title>
     <authors>Kārlis Gaņģis</authors>
     <licenseUrl>https://raw.githubusercontent.com/Knagis/CommonMark.NET/master/LICENSE.md</licenseUrl>
@@ -11,7 +11,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <summary>Fastest .NET library for converting Markdown documents to HTML.</summary>
     <description>.NET library for converting Markdown documents to HTML according to the CommonMark specification. Optimized for maximum performance and targets every .NET version since 2.0, including PCL, Mono and .NET Core.</description>
-    <releaseNotes>Fix unhandled exception.</releaseNotes>
+    <releaseNotes>Improves source position tracking for HTML blocks.</releaseNotes>
     <copyright>Copyright © Kārlis Gaņģis 2014-2016</copyright>
     <tags>CommonMark Markdown</tags>
   </metadata>
