--- a/CommonMark/CommonMark.Base.csproj
+++ b/CommonMark/CommonMark.Base.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Syntax\StringContent.cs" />
     <Compile Include="Syntax\StringContentPart.cs" />
+    <Compile Include="Syntax\TableHeaderAlignment.cs" />
     <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
