--- a/CommonMark.Tests/CommonMark.Tests.csproj
+++ b/CommonMark.Tests/CommonMark.Tests.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="DelimiterCharTests.cs" />
     <Compile Include="HeadingTests.cs" />
+    <Compile Include="PlaceholderTests.cs" />
     <Compile Include="SourcePositionTests.cs" />
     <Compile Include="EnumeratorTests.cs" />
     <Compile Include="StrikethroughTests.cs" />
