Moved all table methods to separet file

--- a/CommonMark/CommonMark.Base.csproj
+++ b/CommonMark/CommonMark.Base.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Parser\PositionTracker.cs" />
     <Compile Include="Parser\ScannerCharacterMatcher.cs" />
     <Compile Include="Parser\ScannerHtmlTag.cs" />
+    <Compile Include="Parser\TableMethods.cs" />
     <Compile Include="Parser\TabTextReader.cs" />
     <Compile Include="Syntax\Block.cs" />
     <Compile Include="Parser\BlockMethods.cs" />
